--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -40,11 +40,11 @@
                 <form method="POST">
                     {% csrf_token %}
                     <fieldset class="form-group">
-                        <legend class="border-bottom pt-4 pb-4 text-center" style="color: black;">ADMIN REGISTER</legend>
+                        <legend class="border-bottom pt-4 pb-4 text-center" style="color: black;">MAIN ADMIN SIGNIN</legend>
                         {{ form|crispy }}
                     </fieldset>
                     <div class="form-group">
-                        <button class="btn w-100 loginBtn" type="submit">REGISTER</button>
+                        <button class="btn w-100 loginBtn" type="submit">Log in</button>
                     </div>
                 </form>
             </div>
