--- a/templates/register.html
+++ b/templates/register.html
@@ -1,62 +1,26 @@
-{% extends "base.html" %}
-{% load crispy_forms_tags %}
-{% load static %}
+{% extends "layouts/auth_base.html" %} 
+{% load crispy_forms_tags %} 
+{% load static %} 
 {% block css_link %}
-<style>
-        /* .register{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 100%;
-        color: #969696;
-        
-    } */
-    .register-body{
-        background-color: white;
-    }
-    body{
-        background-color: #F0EFF4;
-    }
-    .registerBtn, .registerBtn:active,
-.registerBtn:visited,
-.registerBtn:focus {
-        background-color: #969696;
-        border: #969696;
-        color: white;
-    }
-    .registerBtn:hover{
-        background-color: #7f7e7e;
-    }
-</style>
-{% endblock %}
-
-{% block content %}
-<div class="register">
-    <div class="heading pt-4 pb-4 text-center">
-        <h3>Create your account</h3>
-    </div>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-5 col-md-5 register-body pl-4 pr-4 pb-4">
-
-                <form method="POST">
-                    {% csrf_token %}
-                    <fieldset class="form-group">
-                        {{ form|crispy }}
-                    </fieldset>
-                    <div class="form-group">
-                        <button class="btn w-100 registerBtn" type="submit">Sign Up</button>
-                    </div>
-                </form>
-                <div class="border-top pt-3">
-                    <small class="text-muted">
-                        Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
-                    </small>
-                </div>
-
-            </div>
-        </div>
-    </div>
+<!-- <link rel="stylesheet" href="{% static 'users/main.css' %}"> -->
+{% endblock %} {% block content %}
+<div class="w-screen mt-20 mb-10">
+<div class="flex justify-center items-center bg-gray-100 sm:w-4/12 mx-auto p-5 rounded-xl">
+        <form method="POST" class="w-2/3">
+          {% csrf_token %}
+          <fieldset class="form-group">
+            <legend
+              class="text-center text-2xl font-bold mb-10"
+            >
+              Sign Up
+            </legend>
+            {{ form|crispy }}
+          </fieldset>
+          <div class="flex justify-center my-5">
+            <button class="bg-black hover:bg-indigo-500 py-2 px-5 text-white font-bold text-xl rounded-xl" type="submit">Sign up</button>
+          </div>
+        </form>
 </div>
+</div>
+
 {% endblock content %}
