--- a/templates/layouts/auth_base.html
+++ b/templates/layouts/auth_base.html
@@ -24,11 +24,13 @@
       <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
         <div class="flex h-16 items-center justify-between">
           <div class="flex items-center justify-center md:gap-5 gap-2">
+            <a href="/">
             <img
               src="{% static 'logo/amc_logo.jpg' %}"
               class="sm:h-24 h-14"
               alt=""
             />
+            </a>
             <h1 class="font-bold sm:text-5xl text-3xl">AMC</h1>
           </div>
 
@@ -37,7 +39,7 @@
               <div class="flex sm:gap-4 gap-1">
                 <a
                   class="transition-transform hover:scale-105 duration-500 rounded-md hover:bg-indigo-700 bg-indigo-500 sm:px-5 px-2.5 py-1.5 sm:py-2.5 text-sm font-bold text-white shadow"
-                  href="/"
+                  href="/login"
                 >
                   Login
                 </a>
@@ -45,7 +47,7 @@
                 <div class="flex">
                   <a
                     class="transition-transform hover:scale-105 duration-500 rounded-md bg-gray-900 sm:px-5 sm:py-2.5 px-2.5 py-1.5 text-sm font-bold text-white"
-                    href="/"
+                    href="/register"
                   >
                     Register
                   </a>
@@ -68,7 +70,9 @@
             <div
               class="flex justify-center sm:justify-start items-center gap-3"
             >
+            <a href="/">
               <img src="{% static 'logo/amc_logo.jpg' %}" class="h-20" alt="" />
+            </a>
               <h1 class="font-bold text-5xl">AMC</h1>
             </div>
 
