--- a/templates/complaint/your_complaints.html
+++ b/templates/complaint/your_complaints.html
@@ -19,9 +19,11 @@
       <!-- complaints  -->
       <section class="sm:basis-9/12 mt-5 sm:mt-0">
         <div class="flex justify-center">
-          <div class="grid sm:grid-cols-2 grid-cols-1 justify-center gap-5">
-                {% for c in complaints %}
-  <div class="flex flex-col gap-8 bg-gray-100 rounded-xl p-5">
+          
+            {% if complaints %}
+<div class="grid sm:grid-cols-2 grid-cols-1 justify-center gap-5">
+     {% for c in complaints %}
+          <div class="flex flex-col gap-8 bg-gray-100 rounded-xl p-5">
               <div class="grid grid-cols-2">
                 <span class="status text-left text-orange-500 font-bold"
                   >PENDING</span
@@ -44,7 +46,11 @@
               </div>
             </div>
             {% endfor %}
-          </div>
+</div>
+            {% else %}
+                <h1 class="text-3xl flex justify-center align-center">No complaints</h1>
+            {% endif %}
+               
         </div>
       </section>
     </main>
