--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "layouts/user_base.html" %} {% load static %} {% block css_link %}
+{% extends "base.html" %} {% load static %} {% block css_link %}
 <style>
   .empty_message {
     position: absolute;
