--- a/templates/complaint_create.html
+++ b/templates/complaint_create.html
@@ -1,26 +1,60 @@
-{% extends "layouts/user_base.html" %}
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% load static %}
 {% block css_link %}
+<style>
+    .complaint-body{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        color: #969696;
+        background-color: white;
+    }
+    body{
+        background-color: #F0EFF4;
+    }
+    .complaintBtn, .complaintBtn:active,
+.complaintBtn:visited,
+.complaintBtn:focus {
+        background-color: #969696;
+        border: #969696;
+        color: white;
+    }
+    .complaintBtn:hover{
+        background-color: #7f7e7e;
+    }
+</style>
 {% endblock %}
 
 {% block content %}
-<div class="w-screen mt-20 mb-10">
-<div class="flex justify-center items-center bg-gray-100  sm:w-4/12 mx-auto p-5 rounded-xl">
-        <form method="POST" class="w-11/12">
-          {% csrf_token %}
-          <fieldset class="form-group">
-            <legend
-              class="text-center text-2xl font-bold mb-10"
-            >
-              Add New Complaint
-            </legend>
-            {{ form|crispy }}
-          </fieldset>
-          <div class="flex justify-center my-5">
-            <button class="bg-black hover:bg-indigo-500 py-2 px-5 text-white font-bold text-xl rounded-xl" type="submit">Submit</button>
-          </div>
-        </form>
-</div>
+<div class="complaint-form">
+    <div class="container">
+        
+        <div class="row justify-content-center">
+            <div class="heading pt-5 text-center">
+                <h2>Complaint form</h2>
+            </div>
+            <div class="col-lg-5 col-md-5 col-sm-10 complaint-body p-4">
+
+                <form method="POST">
+                    {% csrf_token %}
+                    <fieldset class="form-group">
+                        {{ form|crispy }}
+                    </fieldset>
+                    <div class="form-group">
+                        <button class="btn w-100 complaintBtn" type="submit">Submit</button>
+                    </div>
+                </form>
+                <!-- <div class="border-top pt-3">
+                    <small class="text-muted">
+                        Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
+                    </small>
+                </div> -->
+
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock content %}
