--- a/templates/complaint_detail.html
+++ b/templates/complaint_detail.html
@@ -1,4 +1,4 @@
-{% extends "layouts/user_base.html" %}
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% load static %}
 {% block css_link %}
@@ -8,53 +8,87 @@
 {% endblock %}
 
 {% block content %}
+<div class="complaint-details">
+    <!-- Page Content -->
+    <div class="container">
 
-  <main>
-      <section class="max-w-6xl mx-auto my-20 font-outfit">
-        <div
-          class="flex items-center gap-3 bg-indigo-500 rounded-lg p-2 mt-20 w-2/3 mx-auto"
-        >
-          <div class="flex flex-col w-full">
-            <div class="grid grid-cols-2 gap-3">
-              <div class="flex items-center gap-2">
-                <img src="{% static 'icons/complaint.svg' %}" class="h-8 w-8" alt="" />
-                <h3 class="text-white sm:text-xl text-sm font-bold">
-                  {{complaint.title}}
-                </h3>
-                <div class="pl-5">
+        <div class="row justify-content-center">
+
+            <!-- Post Content Column -->
+            <div class="col-8">
+
+                <!-- Title -->
+                <h1 class="mt-4">{{complaint.title}}</h1>
+
+                <!-- Author -->
+                <p class="lead">
+                    by
+                    <a href="{% url 'profile' %}">{{complaint.user_id}}</a>
+                </p>
+                <span class="badge  badge-dark">Status</span>
                 {% if complaint.status == 1 %}
-                  <h4
-                    class="text-orange-600 font-bold text-sm hover:scale-105 transition-transform duration-500 cursor-pointer bg-gray-50 py-1.5 px-2 rounded-xl"
-                  >
-                    PENDING
-                  </h4>
+                <span class="badge badge-warning">Pending</span>
                 {% else %}
-                 <h4
-                    class="text-orange-600 font-bold text-sm hover:scale-105 transition-transform duration-500 cursor-pointer bg-gray-50 py-1.5 px-2 rounded-xl"
-                  >
-                    COMPLETED
-                  </h4>
-                {% endif %}
-                
-                </div>
-              </div>
-              <div>
-                <h2
-                  class="text-white sm:text-lg hidden sm:block font-semibold text-right pr-2"
-                >
-                  {{complaint.date_posted}}
-                </h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="mt-10 bg-gray-50 w-2/3 mx-auto p-5 rounded-xl">
-          <h1 class="text-lg font-semibold">Description</h1>
-          <p class="w-10/12 mt-5 text-gray-600">
-            {{complaint.details}}
-          </p>
-        </div>
-      </section>
-    </main>
+                <span class="badge badge-success">Solved</span>
+                {% endif %}<br><br>
+                <hr style="width: 100%;">
 
+                <!-- Date/Time -->
+                <p>{{complaint.date_posted}}</p>
+
+                <hr style="width: 100%;"><br>
+
+                <!-- Post Content -->
+                <p class="lead"><mark>{{complaint.details}}</mark></p>
+
+
+
+                {% if request.user.profile.is_employee %}
+                <form action="{% url 'status-change' complaint.id %}" method="Post">
+                    {% csrf_token %}
+                    <div class="btn-group">
+                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="submit" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Change status
+                        </button>
+                        <div class="dropdown-menu" style="background-color: #f8f9fa;">
+                            <button type="submit" class="btn btn-light w-100" name="Solved">Solved</button>
+                            <hr class="w-100">
+                            <button type="submit" class="btn btn-light w-100" name="Pending">Pending</button>
+
+                        </div>
+                    </div>
+                </form><br>
+                {% endif %}
+                <hr style="width: 100%;">
+                <!-- Comments Form -->
+                <div class="card my-4">
+                    <h5 class="card-header">Leave a feedback:</h5>
+                    <div class="card-body">
+                        <form method="Post">
+                            <div class="form-group">
+                                {% csrf_token %}
+                                {{feedback_form|crispy}}
+                            </div>
+                            <input class="btn btn-primary" type="submit" value="Submit">
+                        </form>
+                    </div>
+                </div>
+
+                <!-- Single Comment -->
+                {% for feedback in feedbacks %}
+                <div class="media mb-4">
+                    <img class="d-flex mr-3 rounded-circle" src="{{ feedback.user.profile.image.url }}" alt=""
+                        style="width:60px;height:60px;">
+                    <div class="media-body">
+                        <h5 class="mt-0"><strong>{{feedback.user}}</strong></h5>
+                        <span class="text-muted"><em>{{feedback.content}}</em></span>
+                    </div>
+                </div>
+                {% endfor %}
+
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
