--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -77,7 +77,7 @@
               <div class="sm:flex sm:gap-4">
                 <a
                   class="transition-transform hover:scale-105 duration-500 rounded-md hover:bg-indigo-700 bg-indigo-500 px-5 py-2.5 text-sm font-bold text-white shadow"
-                  href="/login"
+                  href="/"
                 >
                   Login
                 </a>
@@ -85,7 +85,7 @@
                 <div class="hidden sm:flex">
                   <a
                     class="transition-transform hover:scale-105 duration-500 rounded-md bg-gray-900 px-5 py-2.5 text-sm font-bold text-white"
-                    href="/register"
+                    href="/"
                   >
                     Register
                   </a>
@@ -201,13 +201,10 @@
               title="Register"
               class="bg-indigo-500 rounded-xl transition-transform hover:scale-110 duration-500"
             >
-            <a href="/login">
               <span class="font-bold text-white p-5"> File Complaint </span>
-            </a>
             </button>
             <a
               title="know more"
-              href="#about"
               class="transition-transform hover:scale-110 duration-500 text-indigo-500 hover:underline underline-offset-4 decoration-indigo-400 font-semibold p-2 cursor-pointer"
             >
               Learn More
@@ -263,7 +260,7 @@
               </p>
 
               <a
-                href="/login"
+                href="#"
                 class="mt-8 inline-flex items-center rounded-lg transition-transform hover:scale-110 duration-300 border border-indigo-500 bg-indigo-600 px-8 py-3 text-white hover:bg-transparent hover:text-indigo-600 focus:outline-none focus:ring active:text-indigo-500"
               >
                 <span class="text-sm font-bold"> Get Started </span>
